<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_848a8f"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.mylhyl.zxing.scanner.ScannerView
        android:id="@+id/scanner_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/llayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/topbar_leftbtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@mipmap/topbar_leftbtn"
            android:layout_marginTop="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="5dp"
            android:textColor="#F1F0F0"
            android:textSize="25sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/llayout1"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sendfile"
            android:textSize="25sp"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clicknews_phone"
            android:textSize="18sp"
            android:textColor="#F6F6F6"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shengcheng"
            android:textSize="18sp"
            android:textColor="#F6F6F6"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/scanner_view"
        app:layout_constraintBottom_toBottomOf="parent">
     <Button
         android:id="@+id/newsphone_download"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@mipmap/newsphone_btn"
         android:layout_marginBottom="150dp"
         android:text="@string/newphone_install" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>