<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog"
    android:gravity="center"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="216dp"
        android:layout_height="24dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="26dp"
        android:layout_marginRight="33dp"
        android:gravity="center"
        android:text="@string/prompt"
        android:textColor="#333333"
        android:textSize="20dp" />

        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/tv_title"
            android:text="@string/success"
            android:textColor="#666666"
            android:textSize="15sp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/OKK"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_wancheng"
            android:gravity="center"
            android:text="@string/finish"/>
    </LinearLayout>
</LinearLayout>

