<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <RelativeLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#ffffff"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/menu_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:background="@mipmap/menu"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/name_clone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Phone_Clone"
        android:textSize="25sp"
        android:textColor="#333333"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <FrameLayout
        android:id="@+id/express_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/name_clone"
        app:layout_constraintBottom_toTopOf="@id/old"/>
    <FrameLayout
        android:id="@+id/tengxun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/name_clone"
        app:layout_constraintBottom_toTopOf="@id/old"/>
    <LinearLayout
        android:id="@+id/old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@mipmap/old_ll_bkg"
        android:layout_marginTop="200dp">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/cl1">
            <ImageView
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/cl1"
                app:layout_constraintLeft_toLeftOf="@id/cl1"
                android:background="@mipmap/send"
                android:layout_marginLeft="60dp"/>
            <TextView
                android:id="@+id/send_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/send"
                app:layout_constraintLeft_toLeftOf="@id/cl1"
                android:text="@string/send"
                android:textSize="15sp"
                android:textColor="#5A5757"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/old_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/send"
                app:layout_constraintRight_toRightOf="@id/cl1"
                app:layout_constraintTop_toTopOf="@id/cl1"
                android:text="@string/Old_phone"
                android:textSize="25sp"
                android:textColor="#000000"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/old_phone"
                app:layout_constraintLeft_toRightOf="@id/send_list"
                android:text="@string/old_list"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="25dp"
                android:textColor="#5A5757"
                android:textSize="15sp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/old"
        android:background="@mipmap/old_ll_bkg">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/cl2">
            <ImageView
                android:id="@+id/receive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/cl2"
                app:layout_constraintLeft_toLeftOf="@id/cl2"
                android:background="@mipmap/file"
                android:layout_marginLeft="60dp"/>
            <TextView
                android:id="@+id/receive_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/receive"
                app:layout_constraintLeft_toLeftOf="@id/cl2"
                android:text="@string/receive"
                android:textSize="15sp"
                android:textColor="#5A5757"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/new_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/receive"
                app:layout_constraintRight_toRightOf="@id/cl2"
                app:layout_constraintTop_toTopOf="@id/cl2"
                android:text="@string/new_phone"
                android:textSize="25sp"
                android:textColor="#000000"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/new_phone"
                app:layout_constraintLeft_toRightOf="@id/receive_list"
                android:text="@string/news_list"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="25dp"
                android:textColor="#5A5757"
                android:textSize="15sp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/news"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#5A5757"
            android:text="@string/need_two"/>
        <TextView
            android:id="@+id/click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_here"
            android:textSize="17sp"
            android:textColor="#3192DF"/>

    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@mipmap/page_bkg"/>

</androidx.constraintlayout.widget.ConstraintLayout>