<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:id="@+id/lilayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="15dp">
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/setting_back"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/setting"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="#000000"/>
    </LinearLayout>

<!--    <FrameLayout-->
<!--        android:id="@+id/fl"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="80dp"-->
<!--        android:visibility="visible"-->
<!--        app:layout_constraintBottom_toTopOf="@id/lilayout5"-->
<!--        app:layout_constraintTop_toBottomOf="@id/lilayout1"-->
<!--        tools:layout_editor_absoluteX="0dp" />-->
    <FrameLayout
        android:id="@+id/fl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/lilayout5"
        app:layout_constraintTop_toBottomOf="@id/lilayout1"
        tools:layout_editor_absoluteX="0dp" />
    <LinearLayout
        android:id="@+id/lilayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fl"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        android:background="@drawable/text_underline">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/fenxiang"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Share_with_friends"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_marginLeft="10dp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/in"
            android:layout_marginLeft="160dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lilayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lilayout5"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:background="@drawable/text_underline">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/pinglun"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Rate_us"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_marginLeft="10dp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/in"
            android:layout_marginLeft="180dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lilayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lilayout2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:background="@drawable/text_underline">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/yinsi"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_marginLeft="10dp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/in"
            android:layout_marginLeft="180dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lilayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lilayout3"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:background="@drawable/text_underline">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/xieyi"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/in"
            android:layout_marginLeft="180dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>